Sandpack error icon overlapping issue fix (#4302)
* sandpack error icon overlapping issue fix

* modified errorline css

--- a/beta/src/styles/sandpack.css
+++ b/beta/src/styles/sandpack.css
@@ -93,9 +93,8 @@ html.dark .sp-tabs .sp-tab-button[data-active='true'] {
 }
 
 .sp-code-editor .cm-errorLine:after {
-  position: absolute;
-  right: 8px;
-  top: 0;
+  position: relative;
+  top: 1px;
   content: '\26A0';
   font-size: 22px;
   line-height: 16px;
